theme partial changes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,17 +1,16 @@
-<div class="theme">
+<div [class]="appliedTheme">
   <header>
     <nav class="navbar fixed-top navbar-light bg-light">
       <a class="navbar-brand">Where in the world?</a>
-      <form class="form-inline">
-        <button class="btn btn-light my-2 my-sm-0" type="submit"><fa-icon [icon]="farMoon"></fa-icon>Dark Mode</button>
-      </form>
+      <!-- <form class="form-inline"> -->
+        <button class="btn btn-light my-2 my-sm-0"  (click)="switchTheme()"><fa-icon [icon]="appliedTheme ==='theme-light' ? farMoon : faMoon"></fa-icon>Dark Mode</button>
+      <!-- </form> -->
     </nav>
   </header>
   <main>
     <div class="container">
       <router-outlet></router-outlet>
     </div>
-
   </main>
   <footer>
     <!-- <app-footer></app-footer> -->
