--- a/src/app/detail/country-detail/country-detail.component.html
+++ b/src/app/detail/country-detail/country-detail.component.html
@@ -1,4 +1,4 @@
-<section style="margin-top: 4rem;">
+<section style="margin-top: 4rem;" class="detail">
 <div class="row">
     <button class="btn btn-light" (click)="onBackPress()"><fa-icon [icon]="faLongArrowLeft"></fa-icon> Back</button>
 </div>
