--- a/src/app/home/country/country.component.html
+++ b/src/app/home/country/country.component.html
@@ -1,4 +1,4 @@
-<div class="card" style="width: 18rem;">
+<div class="card theme-element" style="width: 18rem;">
     <img class="card-img-top" src="{{country.flag}}" alt="Card image">
     <div class="card-body">
       <h5 class="card-title">{{country.name}}</h5>
