--- a/src/app/errors/not-found/not-found.component.html
+++ b/src/app/errors/not-found/not-found.component.html
@@ -1,1 +1,9 @@
-<p>not-found works!</p>
+<div class="rc-theme">
+  <div class="container">
+      <div class="page-404">
+        <h1>404</h1>
+        <h3>Page not found</h3>
+        <button class="btn theme-element" [routerLink]="['/']">GO TO HOMEPAGE</button>
+    </div>
+  </div>
+</div>
