--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,18 +1,21 @@
 <div [class]="appliedTheme">
   <header>
-    <nav class="navbar fixed-top navbar-light bg-light">
-      <a class="navbar-brand">Where in the world?</a>
-      <!-- <form class="form-inline"> -->
-        <button class="btn btn-light my-2 my-sm-0"  (click)="switchTheme()"><fa-icon [icon]="appliedTheme ==='theme-light' ? farMoon : faMoon"></fa-icon>Dark Mode</button>
-      <!-- </form> -->
+    <nav class="navbar fixed-top theme-header">
+      <div class="container">
+      <a class="navbar-brand" [routerLink]="['/']"><span class="brand-text">Where in the world?</span></a>
+        <button class="btn my-2 my-sm-0"  (click)="switchTheme()">
+          <fa-icon [icon]="appliedTheme === themeLight ? farMoon : faMoon"></fa-icon>
+         <span class="icn-text-padding "> Dark Mode </span>
+      </button>
+    </div>
     </nav>
   </header>
   <main>
-    <div class="container">
+    <!-- Loader -->
+    <ngx-spinner bdColor="rgba(51, 51, 51, 0.8)" size="medium" type="ball-fussion">
+      <p class="loading-text">Loading... </p>
+    </ngx-spinner>
+
       <router-outlet></router-outlet>
-    </div>
   </main>
-  <footer>
-    <!-- <app-footer></app-footer> -->
-  </footer>
 </div>
